Lower bonk.mp3 volume in HTML

--- a/index.html
+++ b/index.html
@@ -125,6 +125,8 @@
   </div>
 <script>
   const bonkAudio = document.getElementById("bonk-audio");
+  bonkAudio.volume = 0.3; // ✅ Set bonk sound volume to 30%
+
   const examples = [
     "BonkBoy teaches crypto to a squirrel 🐿️📈",
     "BonkBoy’s hoodie is now made of gold ✨🧂",
